# bayesian_logistic_regression

./: bayesian_logistic_regression.ipynb  heart.csv  pyproject.toml
