[tool.poetry]
name = "bayesian_logistic_regression"
version = "0.1.0"
description = ""
authors = ["fraser-brownn <fraserdbrown@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
torch = "^2.1.2"
pyro-ppl = "^1.8.6"
ipykernel = "^6.27.1"
scikit-learn = "^1.3.2"
black = "^23.12.1"
arviz = "^0.17.0"
corner = "^2.2.2"
plotly = "^5.18.0"
nbformat = "^5.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
